--- a/calisthenics-styles.css
+++ b/calisthenics-styles.css
@@ -107,13 +107,8 @@ p {
     text-align: left;
 }
 
-img {
-    border-radius: 8px;
-    box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1);
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 800px;
+img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+    display: none;
 }
 
 .footer {
