--- a/calisthenics-styles.css
+++ b/calisthenics-styles.css
@@ -8,9 +8,16 @@ body {
     margin: 0;
 }
 
+.header-image {
+    background-image: url(./images/0header.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+}
+
 .header {
     color: white;
-    background: #546A76;
     font-size: 32px;
     text-align: center;
     padding: 24px;
@@ -19,6 +26,7 @@ body {
 #navbar {
     background-color: #090909;
     overflow: hidden;
+    box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 0.5), 0 12px 40px 0 rgba(130, 128, 129, 0.5);
 }
 
 #navbar a {
@@ -107,6 +115,15 @@ p {
     text-align: left;
 }
 
+#pic {
+    width: 800px;
+    border-radius: 8px;
+    box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
     display: none;
 }
@@ -124,7 +141,7 @@ img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhos
 
     .main,
     .list,
-    img {
+    #pic {
         width: 75%;
         text-align: left;
     }
