--- a/contacts-styles.css
+++ b/contacts-styles.css
@@ -8,9 +8,16 @@ body {
     margin: 0;
 }
 
+.header-image {
+    background-image: url(./images/0header.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+}
+
 .header {
     color: white;
-    background: #546A76;
     font-size: 32px;
     text-align: center;
     padding: 24px;
@@ -19,6 +26,7 @@ body {
 #navbar {
     background-color: #090909;
     overflow: hidden;
+    box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 0.5), 0 12px 40px 0 rgba(130, 128, 129, 0.5);
 }
 
 #navbar a {
@@ -149,7 +157,7 @@ input[type=submit]:hover {
         position: relative;
         left: 21%
     }
-
+    
 }
 
 @media screen and (max-width: 768px) {
